adding cross origin filter and updating readme.md contents